@@ -1,4 +1,4 @@
-.TH gm 1 "2011/01/23" "GraphicsMagick"
+.TH gm 1 "2011/05/31" "GraphicsMagick"
 .TP
 .in 15
 .in 15
@@ -1307,6 +1307,17 @@ is "msb2lsb", which matches the native bit order of all modern CPUs. The
 only exception to this is when Group3 or Group4 FAX compression is
 requested since FAX machines send data in bit-reversed order and
 therefore RFC 2301 recommends using reverse order.
+
+.in 15
+.in 15
+.B "tiff:group-three-options=<value>"
+.in 20
+ \fR
+.in 20
+If the tiff:group-three-options key is defined, GraphicsMagick
+will use it to set the group3 options tag when writing
+group3-compressed TIFF.  Please see the TIFF specification for the
+usage of this tag.  The default value is 4.
 
 .in 15
 .in 15
