@@ -51,6 +51,15 @@
 <div class="document">
 
 
+<p>2011-05-31  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li>doc/options.imdoc: Document tiff:group-three-options define.</li>
+<li>coders/tiff.c (WriteTIFFImage): Add support for a
+tiff:group-three-options define to allow power-users to set the
+value of the GROUP3OPTIONS tag.</li>
+</ul>
+</blockquote>
 <p>2011-05-28  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
